# northstar-cloud

./: AUTHORS  ChangeLog  Dockerfile  README.md  logging.ini  requirements.txt  setup.cfg  setup.py  tox.ini
etc/: logging.ini  northstar-service-config.json
etc/northstar-service-config/: config  northstar-service-config
examples/: create-user1.json  create-user2.json  example1.json  example2.json  example3.json  example4.json  example5.json  example6.json  example7.json  example8.json  get-image.json  get-user.json  not_string_format.json  sample-user.json  upload-image.json  weather-info.json  wrongformat.json
minikube/: detective-api-config.json  detective-api-config.yaml  detective-api-deployement.yaml  northstar-api-service-deployement.yaml  northstar-image-scanning-service-deployement.yaml  northstar-service-config.yaml  northstar-service-deployement.yaml  northstar-weather-service-deployement.yaml  northstart-mongodb.yaml
northstar_cloud/api/: detective_api_rpc.py  detective_api_rpc_client.py  northstar_pb2.py  northstar_pb2_grpc.py
northstar_cloud/api/proto/: build_proto.sh  detective.proto  detective_pb2.py  detective_pb2_grpc.py  northstar.grpc.swift  northstar.pb.swift  northstar.proto  northstar_pb2.py  northstar_pb2_grpc.py
northstar_cloud/cli/: detective_api_cli.py  northstar_cloud_image_scanning_start.py  northstar_cloud_start.py  northstar_cloud_user_ml_start.py  northstar_cloud_user_services_start.py
northstar_cloud/clients/: northstart_service.py  northstart_service_client.py  northstart_user_services_client.py
northstar_cloud/common/: exceptions.py  logs.py  utils.py
northstar_cloud/db/: clients.py  detective_graph.py  north_star_service_helper.py
northstar_cloud/db/models/: northstar_db_model.py
northstar_cloud/services/: detective_api_service.py  northstar_image_scanning_service.py  northstar_service.py  northstar_user_ml_analytics_service.py  northstar_user_services.py  northstar_watson_services.py
northstar_cloud/services/ibm_cloud_services/: ibm_geospatial_services.py  ibm_watson_ml_services.py  ibm_weather_services.py
northstar_cloud/services/ml_models/: columns_to_keep.pickle  model_reqs.pickle  northstar_fire_pred.joblib
northstar_cloud/tests/: base.py
northstar_cloud/tests/functional/: test_northstar_image_scanning.py  test_witness_prediction.py
(+6 files in other folders)
