[metadata]
name = northstar-cloud
summary = A microservice for northstar-cloud services.
description-file =
    README.md
author="Hitesh Wadekar"
author_email="hitesh.wadekar@ibm.com"

classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    northstar-cloud

[entry_points]
console_scripts =
    northstar-cloud = northstar_cloud.api.detective_api_rpc:serve

[wheel]
universal = 1
