[metadata]
name = northstar-cloud
summary = A microservice for northstar_cloud services.
description-file =
    README.md
author="Hitesh Wadekar"
author_email="hitesh.wadekar@ibm.com"

classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    northstar_cloud
data_files =
    etc/northstar_cloud =
        etc/logging.ini
    etc/northstar_cloud = etc/northstar-service-config/config

[entry_points]
console_scripts =
    northstar-cloud = northstar_cloud.cli.northstar_cloud_user_services_start:serve
    northstar-image-scanning = northstar_cloud.cli.northstar_cloud_image_services_start:run
    northstar-weather = northstar_cloud.cli.northstar_cloud_user_ml_start:run

[wheel]
universal = 1